  * added installation for Visual Studio 11
  * tweaked dialogs to better integrate with VS

2012-01-07 Version 0.3.30

  * fixed utf8 to OLE string conversion, that could get in the way when using non ascii file names
  * property pages now adjust their font and size to the IDE environment
  * __ctfe is now highlighted as a keyword
  * scope(identifier) with wrong identifier shown as a parse error
  * completion automatically inserts now if there is only one candidate
  * completion of import modules now restricted to files, not symbols
  * colorizer now asks the parser whether "is" and "in" are used as operators
  * debugger data tooltip now grabs ident1.ident2 expressions when hovering ident2
  * added checkbox for options -gs and -property to project configuration
  * added new color to highlight predefined versions
  * creating new folder now initiates renaming it
  * fixed error message capture for error list in case the message also contains "filename(lineno):"
  * new options page "Tools->Options->Text Editor->D->Intellisense" to select sources of code completion
  * experimental tooltips and code completion from semantic analysis of source code
  * project configuration: new debugger option to redirect stdout to the debugger output window
  * project configuration: new option to pause after running program without debugger
  * added option to "Tools->Options->Projects and Solutions->Visual D Settings" to stop a solution build
    if a project fails to build

unreleased Version 0.3.31

  * added option to "Intellisense" page to configure trigger of code completion
  * delay code definition window update until caret at the same position for a second to avoid pauses while
    navigating through the source
  * added support for building with GDC
  * added platform support for "x86" (use with GDC only)
  * includes new version 0.23 of cv2pdb that now also converts DWARF to pdb
  * tweaked idl2d to convert files to build with dmd 2.058